--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -42,10 +42,10 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: 20
-        cache: 'yarn'
-    - run: yarn --frozen-lockfile
+        # cache: 'yarn'
+    # - run: yarn --frozen-lockfile
     
-    - run: yarn build
+    - run: npm run build
     
     - uses: actions/configure-pages@v3
     - uses: actions/upload-pages-artifact@v1
