--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -29,22 +29,11 @@ jobs:
     #     python -m pip install --upgrade pip
     #     pip install pandas
   
-    # - name: setup R
-    #   uses: r-lib/actions/setup-r@v2
-    
-    # - name: install R packages
-    #   uses: r-lib/actions/setup-r-dependencies@v2
-    #   with:
-    #     packages: |
-    #       any::readr 
-    #       any::dplyr
-
     - uses: actions/setup-node@v4
       with:
         node-version: 20
-        # cache: 'yarn'
-    # - run: yarn --frozen-lockfile
     
+    - run: npm install
     - run: npm run build
     
     - uses: actions/configure-pages@v3
