--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -19,22 +19,18 @@ jobs:
     - name: checkout repo content
       uses: actions/checkout@v4 
       
-    # - name: setup python
-    #   uses: actions/setup-python@v5
-    #   with:
-    #     python-version: '3.9'
-    
-    # - name: install python dependencies
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     pip install pandas
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
   
+    - uses: snok/install-poetry@v1
+
     - uses: actions/setup-node@v4
       with:
         node-version: 20
     
-    - run: npm install
-    - run: npm run build
+    - run: make install
+    - run: make build
     
     - uses: actions/configure-pages@v3
     - uses: actions/upload-pages-artifact@v1
